this will be deleted

--- a/AvcolMusic1/appsettings.json
+++ b/AvcolMusic1/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MusicContext": "Server=(localdb)\\mssqllocaldb;Database=AvcolMusic;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MusicContext": "Server=(localdb)\\mssqllocaldb;Database=AvcolMusic;Trusted_Connection=True;MultipleActiveResultSets=true;Initial Catalog=ProgrammingCsharp;Integrated Security=True"
   }
 }
